--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "mongoose": "^4.4.15",
-    "multer": "^1.2.0"
+    "multer": "^1.2.0",
+    "cookie-parser":"^1.4.1",
+    "express-session":"^1.13.0",
+    "bcrypt-nodejs": "0.0.3",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0"
+
   },
   "devDependencies": {},
   "scripts": {
