--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "mongoose": "^4.4.15",
-    "multer": "^1.2.0"
+    "multer": "^1.2.0",
+    "bluebird":"^3.4.6"
   },
   "devDependencies": {},
   "scripts": {
