--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "mongoose": "^4.4.15",
-    "multer": "^1.2.0"
+    "multer": "^1.0.6",
+    "bcrypt-nodejs":"0.0.3",
+    "cookie-parser":"^1.4.1",
+    "express-session":"^1.13.0",
+    "node-uuid":"^1.4.7",
+    "passport":"^0.3.2",
+    "passport-facebook":"^2.1.0",
+    "passport-local":"^1.0.0",
+    "q":"^1.4.1"
   },
   "devDependencies": {},
   "scripts": {
