login with google and facebook working

--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "description": "Web Dev at Northeastern University",
   "main": "server.js",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
+    "express-session": "^1.14.2",
     "mongoose": "^4.4.15",
-    "multer": "^1.0.6",
-    "bcrypt-nodejs":"0.0.3",
-    "cookie-parser":"^1.4.1",
-    "express-session":"^1.13.0",
-    "node-uuid":"^1.4.7",
-    "passport":"^0.3.2",
-    "passport-facebook":"^2.1.0",
-    "passport-local":"^1.0.0",
-    "q":"^1.4.1"
+    "multer": "^1.2.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "textangular": "^1.5.13"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Kaushik Veluru",
+  "author": "Jose G. Annunziato",
   "license": "ISC"
 }
